fix z-indexes

--- a/scopes/compositions/compositions/ui/compositions-panel/compositions-panel.module.scss
+++ b/scopes/compositions/compositions/ui/compositions-panel/compositions-panel.module.scss
@@ -5,10 +5,11 @@
   justify-content: space-between;
   height: 40px;
   font-size: var(--p-xs);
+  transition: all 300ms ease-in-out;
+
   &:hover {
     background-color: var(--border-color, #ededed);
     border-radius: 8px;
-    transition: background-color 300ms ease-in-out;
     .right {
       visibility: unset;
       opacity: 1;
@@ -27,13 +28,17 @@
     align-items: center;
     background-color: var(--base-color);
     color: var(--bg-base);
-    transition: background-color 300ms ease-in-out;
+
+    // overrides
     &:hover {
       background-color: #5d4aec;
+      border-radius: 0px;
     }
+
     .box {
       background-color: var(--bg-color);
     }
+
     .right {
       visibility: unset;
       opacity: 1;
